# type-proxies

./: .travis.yml  LICENSE  README.md  proxies.cabal  type-proxies.cabal
src/Data/Proxy/: Bool.hs  Char.hs  Dynamic.hs  Either.hs  Exception.hs  ExitCode.hs  Extra.hs  Function.hs  Functor.hs  Int.hs  List.hs  Maybe.hs  Monoid.hs  String.hs  Tuple.hs  Word.hs
