name:                 proxies
version:              0.1.0.0
synopsis:             Concrete type proxies
-- description:
homepage:             https://github.com/trskop/proxies
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            Copyright (c) 2014, Peter Trško
category:             Data
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
      Data.Proxy.Functor
    , Data.Proxy.Int
    , Data.Proxy.Maybe
    , Data.Proxy.String
    , Data.Proxy.Word

  other-extensions:    NoImplicitPrelude

  build-depends:
      base >=4.7 && <4.8
    , text >=1.1 && <1.2
