name:                 type-proxies
version:              0.1.0.0
synopsis:             Concrete type proxies
-- description:
homepage:             https://github.com/trskop/type-proxies
bug-reports:          https://github.com/trskop/type-proxies/issues
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            Copyright (c) 2014, 2015, Peter Trško
category:             Data
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  exposed-modules:
      Data.Proxy.Bool
    , Data.Proxy.Dynamic
    , Data.Proxy.Either
    , Data.Proxy.Exception
    , Data.Proxy.ExitCode
    , Data.Proxy.Function
    , Data.Proxy.Functor
    , Data.Proxy.Int
    , Data.Proxy.Maybe
    , Data.Proxy.Monoid
    , Data.Proxy.String
    , Data.Proxy.Word

  other-extensions:     NoImplicitPrelude

  -- Module Data.Proxy was introduced in base 4.7.0.0.
  build-depends:        base >=4.7 && <5

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
